[package]
name = "ccc-2024-10"
version = "0.1.0"
edition = "2021"
default-run = "ccc-2024-10"

[dependencies]
color-eyre = "0.6.3"
dissimilar = "1.0.9"
eyre = "0.6.12"
itertools = "0.13.0"
thiserror = "1.0.65"
transpose = "0.2.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
colored-diff = "0.2.3"
location-macros = "0.1.2"
concat-idents = "1.1.5"

[features]
default = ["level5"]
level1 = []
level2 = ["level1"]
level3 = ["level2"]
level4 = ["level3"]
level5 = ["level4"]
level6 = ["level5"]
